--- a/.travis.yml
+++ b/.travis.yml
@@ -1,1 +1,8 @@
-#language: node_js
+sudo: false
+language: node_js
+node_js:
+  - "5"
+install:
+  - npm install -g easystatic
+script:
+  - es deploy [site] --repo=martingollogly/martingollogly.github.io --domain=martingollogly.js.org
